Fix nav bar wrapping by reducing padding and shortening labels

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -31,8 +31,8 @@ nav {
 
 
 	a {
-		margin: 0 3px;
-		padding: 14px 10px;
+		margin: 0 2px;
+		padding: 14px 6px;
 		border: 0;
 		display: none;
 
